<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.example.sahil.myapplication.FavoriteFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/feedbacktitle"
            android:text="@string/favorites"
            android:padding="5dp"
            android:layout_marginLeft="10dp"/>
        </FrameLayout>
        <com.example.sahil.myapplication.NonScrollListView
            android:id="@+id/favorite_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/feedbacktitle"
                android:text="@string/filters"
                android:padding="5dp"
                android:layout_marginLeft="10dp"/>
        </FrameLayout>
        <com.example.sahil.myapplication.NonScrollListView
            android:id="@+id/filter_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/feedbacktitle"
                android:text="@string/feedback"
                android:padding="5dp"
                android:layout_marginLeft="10dp"/>
        </FrameLayout>
        <com.example.sahil.myapplication.NonScrollListView
            android:id="@+id/feedback_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:textStyle="italic"
            android:id="@+id/settingsfooter1"
            android:text="@string/settings_footer_1"
            android:padding="15dp"
            android:lineSpacingExtra="4dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/settings_footer_2"
            android:textStyle="italic"
            android:id="@+id/settingsfooter2"
            android:lineSpacingExtra="4dp"
            android:padding="15dp"/>
        <ImageView
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginTop="5dp"
            android:layout_width="150dp"
            android:layout_height="21dp"
            android:background="@drawable/blackbird"
            android:layout_marginBottom="25dp"
            android:id="@+id/blackbird"/>
    </LinearLayout>

</LinearLayout>
</ScrollView>
